<resources>

    <string name="app_name">Sensor Tests</string>
    <string name="menu_settings">Settings</string>
    <string name="x_axis">x-axis:</string>
    <string name="y_axis">y-axis:</string>
    <string name="z_axis">z-axis:</string>
    <string name="zero">0.00</string>
    <string name="gravity">Gravity</string>
    <string name="linear_accel">Linear Acceleration</string>
    <string name="sensors_accel_button">Acceleration</string>
    <string name="sensors_environmental_button">Environmental</string>
    <string name="title_activity_environmental">Environmental</string>
    <string name="enviro_ambient_temp">Ambient Temp.:</string>
    <string name="enviro_relative_hum">Relative Humidity:</string>
    <string name="atm_pressure_title">Atmospheric Pressure</string>
    <string name="calibrate_dialog_info">To calibrate the linear accelerometer, please place the device on a flat level surface and press the "Calibrate" button.</string>
    <string name="calibrate_dialog_button">Calibrate</string>
    <string name="accel_calibrate_button">Calibrate accelerometer</string>
    <string name="calibrate_dialog_title">Calibrate accelerometer</string>

</resources>