<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewGravity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/gravity"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

                <TextView
                    android:id="@+id/textViewLabelX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/x_axis"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textViewGravityX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

                <TextView
                    android:id="@+id/textViewLabelY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/y_axis"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textViewGravityY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

                <TextView
                    android:id="@+id/textViewLabelZ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/z_axis"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/textViewGravityZ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

</LinearLayout>